# variantplaner

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md
.github/workflows/: ci.yml  docs.yml
benchmark/: index.html
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
css/: mkdocstrings.css
docs/: usage.md
docs/reference/: api.md
license/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html
reference/variantplaner/: index.html
reference/variantplaner/cli/: index.html
reference/variantplaner/cli/metadata/: index.html
reference/variantplaner/cli/parquet2vcf/: index.html
reference/variantplaner/cli/struct/: index.html
reference/variantplaner/cli/transmission/: index.html
reference/variantplaner/cli/vcf2parquet/: index.html
reference/variantplaner/debug/: index.html
reference/variantplaner/exception/: index.html
reference/variantplaner/extract/: index.html
reference/variantplaner/generate/: index.html
reference/variantplaner/io/: index.html
reference/variantplaner/io/vcf/: index.html
reference/variantplaner/normalization/: index.html
reference/variantplaner/objects/: index.html
reference/variantplaner/objects/annotations/: index.html
reference/variantplaner/objects/contigs_length/: index.html
reference/variantplaner/objects/csv/: index.html
reference/variantplaner/objects/genotypes/: index.html
reference/variantplaner/objects/pedigree/: index.html
reference/variantplaner/objects/variants/: index.html
reference/variantplaner/objects/vcf/: index.html
reference/variantplaner/objects/vcf_header/: index.html
reference/variantplaner/struct/: index.html
reference/variantplaner/struct/genotypes/: index.html
reference/variantplaner/struct/variants/: index.html
scripts/: gen_credits.py  make
search/: search_index.json
src/variantplaner/: __init__.py  exception.py  generate.py  normalization.py
src/variantplaner/cli/: __init__.py  gvcf2parquet.py  parquet2vcf.py  transmission.py  vcf2parquet.py
src/variantplaner/io/: vcf.py
src/variantplaner/objects/: contigs_length.py  coverages.py  genotypes.py  pedigree.py  vcf.py  vcf_header.py
src/variantplaner/struct/: genotypes.py  variants.py
tests/: test_cli.py  test_cli_help.py  test_generate.py  test_normalization.py  test_struct_genotypes.py  test_vcf.py  test_vcf_header.py
tests/data/: multi_child.ped  multi_format.vcf  no_info.genotypes.parquet  transmission.parquet  transmission_multi.parquet
usage/: index.html
variantid/: Makefile  bench.py  run.py
variantid/variantid/: Cargo.toml  pyproject.toml
variantid/variantid/src/: lib.rs  variantid.rs
variantid/variantid/variantid/: _typing.py  extension.py  variant_id.py
