[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "variantplaner"
description = "A tool kit to manage many variant on desktop computer"
authors = [{name = "Pierre Marijon", email = "pierre.marijon-ext@aphp.fr"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.30",
    "polars-u64-idx>=1.30",
    "click>=8",
    "typing-extensions>=4",
    "xopen>=2",
    "variantid @ file:///${PROJECT_ROOT}/variantid/variantid",
]

[project.urls]
Homepage = "https://SeqOIA-IT.github.io/variantplaner"
Documentation = "https://SeqOIA-IT.github.io/variantplaner"
Changelog = "https://SeqOIA-IT.github.io/variantplaner/changelog"
Repository = "https://github.com/SeqOIA-IT/variantplaner"
Issues = "https://github.com/SeqOIA-IT/variantplaner/issues"

[project.scripts]
variantplaner = "variantplaner.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache", "**/.mypy_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "build>=1",
    "git-changelog>=2",
    "twine>=6",
    "yore>=0.4",
]
ci = [
    "duty>=1",
    "mypy>=1",
    "pytest-cov>=6",
    "pytest-randomly>=3",
    "pytest-xdist>=3",
    "pytest>=8",
    "ruff>=0.11",
    "types-markdown>=3",
    "types-pyyaml>=6",
    "yore>=0.4",
]
 docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1",
    "mkdocs-coverage>=1",
    "mkdocs-git-revision-date-localized-plugin>=1",
    "mkdocs-material>=9",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocs>=1",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
