[package]
name = "variantid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "variantid"
crate-type = ["cdylib"]

[dependencies]
polars       = { version = "0.46", features = ["fmt"], default-features = false }
polars-arrow = { version = "0.46", default-features = false }
pyo3         = { version = "0.23", features = ["abi3-py38", "extension-module"] }
pyo3-polars  = { version = "0.20", features = ["derive"] }
rayon        = { version = "1" }
serde        = { version = "1", features = ["derive"] }
ahash        = { version = "0.8", features = ["no-rng"] }